@@ -26,6 +26,9 @@ autopkgtest (3.17) UNRELEASED; urgency=medium
   * ssh-setup/nova: Add workaroud for cloud-init bug writing a wrong
     /etc/hosts. (LP #1494678)
   * adt-run: Log running kernel after each boot. (part of LP #1491865)
+  * Track initial kernel version after test bed setup and when a test/reboot
+    changes the running kernel version. Log these, and create a new
+    "testinfo.json" in the output dir with this information. (LP: #1491865)
 
  -- Martin Pitt <mpitt@debian.org>  Fri, 28 Aug 2015 05:29:25 +0200
 
